Minor bug fixes...
Fix URL name, horizontal scroll fix, change cursor on hover on logo

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,6 @@
+html, body {
+  overflow-x: hidden;
+}
 .white-board,
 .code-editor {
   border-style: solid;
