--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -10,6 +10,7 @@
   width: 12.3rem;
   z-index: 10;
   transform: skewX(-15deg);
+  cursor: pointer;
 }
 
 .logo::before {
